# DEBI_Python

./: session1.ipynb  session2.ipynb  session3.ipynb  session4.ipynb  session5.ipynb  session6.ipynb  session7.ipynb
CollegeProject/: main.py
DataAnalysis/: DashboardDesign.ipynb  DataAnalysis.ipynb  Numpy.ipynb  Pandas.ipynb  numpy_exercise.ipynb  statistics.ipynb  streamlit_dash.py
DataVisualization/: AdvancedVisualization.ipynb  DashboardDesign.ipynb  Matplotlib.ipynb  VisulaizationUseCase.ipynb  main_dash.py
Deployment/Docker/IrisProject/: README.md  pyproject.toml  requirements.txt  run.py  run_app.py
Deployment/Docker/IrisProject/iris/conf/: logger.json
Deployment/Docker/IrisProject/iris/main/: predict.py  train.py
Deployment/Docker/IrisProject/iris/utils/: config.py  data_utils.py
Deployment/Docker/IrisProject/models/: latest_model.pkl
Deployment/Docker/IrisProject/test/: test.bat  test_data_utils.py  test_model_utils.py
MLOps/Poetry/: Dockerfile  README.md  predict.py  pyproject.toml  requirements.txt  run.py  train_model.py
MLOps/Poetry/iris/config/: model_configs.py
MLOps/Poetry/iris/main/: predict.py  train_model.py  visualisation.py
MLOps/Poetry/iris/utils/: setup_logger.py
MachineLearning/: Clustering.ipynb  DataPreprocessing.ipynb  DecisionTree.ipynb  KNN.ipynb  LinearRegression.ipynb  LogisticRegression.ipynb  MultiplefeatureLinearRegression.ipynb  NaieveBayes.ipynb  NeuralNetwork.ipynb  NeuralNetworks_2.ipynb  SVM.ipynb  random_forest_model.pkl
Python/: session1.ipynb  session4.ipynb  session5.ipynb  session7.ipynb
(+107 files in other folders)
