[tool.poetry]
name = "ai-app"
version = "0.1.0"
description = "a demo for an ai application"
authors = ["iadel93 <engsmsm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
