[tool.poetry]
name = "iris"
version = "0.1.0"
description = "iris_project"
authors = ["iadel93 <engsmsm@gmail.com>"]
readme = "README.md"
packages = [{ include = "iris" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
